change background color to avoid wave contrast error

--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: rgb(50, 190, 240);
+    background-color: rgba(50, 190, 240, 0.5);
     font-family: 'Montserrat Alternates', sans-serif;
     display: flex;
     flex-direction:column;
@@ -36,7 +36,7 @@ body {
 }
 
 h1 {
-   color: #fff;
+   color: rgb(141, 146, 148);
    letter-spacing: 2px;
 
 }
